[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Development Status :: 2 - Pre-Alpha", "Natural Language :: English", "Programming Language :: Python :: 3",]
description = "Happi Database Access for LCLS Beamline Devices"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies", "optional-dependencies",]
keywords = []
name = "happi"
requires-python = ">=3.9"
[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[options]
zip_safe = false
include_package_data = true

[project.license]
file = "LICENSE.md"

[project.scripts]
happi = "happi.cli:main"

[tool.setuptools_scm]
write_to = "happi/_version.py"

[tool.flake8]
exclude = "docs/*,versioneer.py"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "happi*",]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.gui]
file = "gui-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.mongo]
file = "mongo-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.test]
file = ["dev-requirements.txt", "gui-requirements.txt", "mongo-requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies.doc]
file = "docs-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.all]
file = ["gui-requirements.txt", "mongo-requirements.txt"]

[tool.pytest.ini_options]
addopts = "--cov=."
